# django-backend-study

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
lectures/: admin.py  models.py
lectures/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
